--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,13 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-.vscode/
+**/.vscode/**
+.env.local
+.env.local.dev
+.env.local.development
+.env.dev
+.env.development
+.env.prod
+.env.production
+
+
