--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@types/draft-js": "^0.11.18",
     "draft-js": "^0.11.7",
+    "ky": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-draft-wysiwyg": "^1.15.0"
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-draft-wysiwyg": "^1.13.8",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
