--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/draft-js": "^0.11.18",
+    "diff": "^5.2.0",
     "draft-js": "^0.11.7",
     "ky": "^1.4.0",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@types/diff": "^5.2.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-draft-wysiwyg": "^1.13.8",
