--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -8,8 +8,10 @@ fastapi = "*"
 uvicorn = "*"
 sqlalchemy = "*"
 databases = "*"
+httpx = "*"
 
 [dev-packages]
+pytest = "*"
 
 [requires]
 python_version = "3.12"
