--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -18,9 +18,10 @@
         "isolatedModules": true,
         "moduleDetection": "force",
         "noEmit": true,
+        "noEmitOnError": false,
         "jsx": "react-jsx",
         /* Linting */
-        "strict": true,
+        "strict": false,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
