--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@types/draft-js": "^0.11.18",
+    "@xstate/react": "^4.1.1",
     "diff": "^5.2.0",
     "draft-js": "^0.11.7",
     "ky": "^1.4.0",
-    "react": "^18.3.1",
+    "react": "link:@types/@xstate/react",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "xstate": "^5.15.0"
   },
   "devDependencies": {
     "@types/diff": "^5.2.1",
