--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@statelyai/inspect": "^0.4.0",
+    "@tanstack/react-query": "^5.51.16",
     "@types/draft-js": "^0.11.18",
     "@xstate/react": "^4.1.1",
     "diff": "^5.2.0",
