--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "link:@types/@xstate/react",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.25.1",
     "xstate": "^5.15.0"
   },
