--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip3 install pipenv
+          pipenv install
 
       - name: Create env file
         working-directory: frontend
