--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Deploy to Server
         run: |
           export ENVIRONMENT=production
-          pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000
+          pipenv run python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000
