--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -48,5 +48,5 @@ jobs:
         run: |
           pwd
           export ENVIRONMENT=production
-          pipenv install psycopg2-binary --user
+          pipenv install psycopg2-binary
           pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000
