--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -39,4 +39,4 @@ jobs:
           pwd
           export ENVIRONMENT=production
           pipenv install psycopg2-binary
-          pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000
+          nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000
