--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - backend/**
 
 jobs:
   deploy:
@@ -39,7 +41,8 @@ jobs:
         run: |
           export ENVIRONMENT=production
           pipenv install psycopg2-binary
-          nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
+          #   nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
+          pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000
 
 
 
