--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -6,6 +6,7 @@ on:
       - main # Trigger the workflow on push to the 'main' branch
     paths:
       - frontend/**
+      - .github/**
 
 jobs:
   build:
