--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - backend/**
-      - .github/**
+      - .github/workflows/deploy_backend.yml
 
 jobs:
   deploy:
@@ -43,7 +43,7 @@ jobs:
           export ENVIRONMENT=production
           pipenv install psycopg2-binary
           #   nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
-          pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000
+          nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 2>&1 > uvicorn.log &
 
 
 
