--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -40,10 +40,12 @@ jobs:
       - name: Deploy to Server
         working-directory: backend
         run: |
+          sudo apt install screen
           export ENVIRONMENT=production
           pipenv install psycopg2-binary
           #   nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
           nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 2>&1 > uvicorn.log &
+          screen -S uvicorn
           sleep 10
 
 
