--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -44,7 +44,7 @@ jobs:
           export ENVIRONMENT=production
           pipenv install psycopg2-binary
           #   nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
-          screen -dm bash -c "pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000"
+          setsid pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
           #   screen -S uvicorn
           sleep 10
 
