--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Generate requirements.txt
         working-directory: backend
         run: |
-          pipenv lock -r > requirements.txt
+          pip3 freeze > requirements.txt
           cat requirements.txt
 
       - name: Install dependencies
