--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           pip3 install --upgrade pip
           pip3 install -r requirements.txt
-          pip3 install psycopg2-binary
+          pip3 install psycopg2-binary uvicorn
 
       - name: Create env file
         working-directory: backend
