--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Generate requirements.txt
         working-directory: backend
         run: |
-          pip3 freeze > requirements.txt
+          pip3 install pipenv
+          pipenv requirements > requirements.txt
           cat requirements.txt
 
       - name: Install dependencies
@@ -34,7 +35,7 @@ jobs:
         run: |
           pip3 install --upgrade pip
           pip3 install -r requirements.txt
-          pip3 install psycopg2-binary uvicorn
+          pip3 install psycopg2-binary
 
       - name: Create env file
         working-directory: backend
