--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -50,4 +50,4 @@ jobs:
         run: |
           sudo apt install screen
           export ENVIRONMENT=production
-          setsid python3 -m uvicorn app.main:app --
+          setsid python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000 --
