--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -50,4 +50,5 @@ jobs:
         run: |
           sudo apt install screen
           export ENVIRONMENT=production
-          setsid python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000 --
+          nohup python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000 & 2>&1 > backend.log
+          echo this should be displayed
