--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -45,10 +45,33 @@ jobs:
           echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env.production
           cat .env.production
 
-      - name: Deploy to Server
-        working-directory: backend
+      - name: Create systemd service file
         run: |
-          sudo apt install screen
-          export ENVIRONMENT=production
-          nohup python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000 & 2>&1 > backend.log &
-          echo this should be displayed
+          sudo tee /etc/systemd/system/fastapi.service << EOL
+          [Unit]
+          Description=FastAPI application
+          After=network.target
+
+          [Service]
+          User=ubuntu
+          WorkingDirectory=/home/ubuntu/actions-runner/_work/kata-allobrain/kata-allobrain/backend
+          ExecStart=export environment=produciton; /usr/bin/python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000
+          Restart=always
+
+          [Install]
+          WantedBy=multi-user.target
+          EOL
+
+      - name: Start and enable FastAPI service
+        run: |
+            sudo systemctl daemon-reload
+            sudo systemctl start fastapi
+            sudo systemctl enable fastapi
+
+    #   - name: Deploy to Server
+    #     working-directory: backend
+    #     run: |
+    #       sudo apt install screen
+    #       export ENVIRONMENT=production
+    #       setsid python3 -m uvicorn app.main:app --host 0.0.0.0 --port 8000 & 2>&1 > backend.log &
+    #       echo this should be displayed
